test/typecheck/fail/unscope_val.sail
$option -dmagic_hash

default Order dec

$include <prelude.sail>

val foo : unit -> unit

$unscope# val foo

function foo() = ()
